Add support for byte vector search and max inner product similarity (#681)